// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EzCard should render card sections horizontally 1`] = `
.recipe-6 {
  background: #ffffff;
  border: 1px solid #ced4d9;
  border-radius: 6px;
}

.recipe-0 {
  padding: 1.4285714285714286rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

.recipe-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.recipe-4 > * {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="recipe-6 recipe-7"
>
  <div
    className="recipe-4 recipe-5"
  >
    <div
      className="recipe-0 recipe-1"
    >
      Lorem ipsum dolor
    </div>
    <div
      className="recipe-0 recipe-1"
    >
      Lorem ipsum dolor
    </div>
  </div>
</div>
`;

exports[`EzCard should render with card sections 1`] = `
.recipe-6 {
  background: #ffffff;
  border: 1px solid #ced4d9;
  border-radius: 6px;
}

.recipe-4 > *:not(:first-child) {
  border-top: 1px solid #ced4d9;
}

.recipe-0 {
  padding: 1.4285714285714286rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

<div
  className="recipe-6 recipe-7"
>
  <div
    className="recipe-4 recipe-5"
  >
    <div
      className="recipe-0 recipe-1"
    >
      Lorem ipsum dolor
    </div>
    <div
      className="recipe-0 recipe-1"
    >
      Lorem ipsum dolor
    </div>
  </div>
</div>
`;

exports[`EzCard should render with default styles 1`] = `
.recipe-4 {
  background: #ffffff;
  border: 1px solid #ced4d9;
  border-radius: 6px;
}

.recipe-2 > *:not(:first-child) {
  border-top: 1px solid #ced4d9;
}

.recipe-0 {
  padding: 1.4285714285714286rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

<div
  className="recipe-4 recipe-5"
>
  <div
    className="recipe-2 recipe-3"
  >
    <div
      className="recipe-0 recipe-1"
    >
      <p>
        Lorem ipsum dolor
      </p>
    </div>
  </div>
</div>
`;

exports[`EzCard should render with header and subheader styles 1`] = `
.recipe-11 {
  background: #ffffff;
  border: 1px solid #ced4d9;
  border-radius: 6px;
}

.recipe-9 > *:not(:first-child) {
  border-top: 1px solid #ced4d9;
}

.recipe-7 {
  padding: 1.4285714285714286rem;
}

.recipe-7 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

.recipe-5 {
  margin: 1.4285714285714286rem 1.4285714285714286rem 0;
}

.recipe-1 {
  color: #565a5c;
  font-size: 1.2857142857142858rem;
  font-weight: 700;
  line-height: 1.35;
  margin: 0;
}

.recipe-3 {
  color: #8b99a6;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.35;
  margin-top: 0.5714285714285714rem;
}

<div
  className="recipe-11 recipe-12"
>
  <div
    className="recipe-5 recipe-6"
  >
    <header>
      <h3
        className="recipe-0 recipe-1 recipe-2"
        size="3"
      >
        Card Heading
      </h3>
      <div
        className="recipe-3 recipe-4"
      >
        Card Subheading
      </div>
    </header>
  </div>
  <div
    className="recipe-9 recipe-10"
  >
    <div
      className="recipe-7 recipe-8"
    >
      <p>
        Lorem ipsum dolor
      </p>
    </div>
  </div>
</div>
`;

exports[`EzCard should render with header styles 1`] = `
.recipe-9 {
  background: #ffffff;
  border: 1px solid #ced4d9;
  border-radius: 6px;
}

.recipe-7 > *:not(:first-child) {
  border-top: 1px solid #ced4d9;
}

.recipe-5 {
  padding: 1.4285714285714286rem;
}

.recipe-5 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

.recipe-3 {
  margin: 1.4285714285714286rem 1.4285714285714286rem 0;
}

.recipe-1 {
  color: #565a5c;
  font-size: 1.2857142857142858rem;
  font-weight: 700;
  line-height: 1.35;
  margin: 0;
}

<div
  className="recipe-9 recipe-10"
>
  <div
    className="recipe-3 recipe-4"
  >
    <h3
      className="recipe-0 recipe-1 recipe-2"
      size="3"
    >
      Card Heading
    </h3>
  </div>
  <div
    className="recipe-7 recipe-8"
  >
    <div
      className="recipe-5 recipe-6"
    >
      <p>
        Lorem ipsum dolor
      </p>
    </div>
  </div>
</div>
`;

exports[`EzCard should render with info accent 1`] = `
.recipe-2 > *:not(:first-child) {
  border-top: 1px solid #ced4d9;
}

.recipe-0 {
  padding: 1.4285714285714286rem;
}

.recipe-0 > *:not(:first-child) {
  margin-top: 1.1428571428571428rem;
}

.recipe-4 {
  background: #ffffff;
  border: 1px solid #ced4d9;
  border-radius: 6px;
  border-left: 5px solid #3e90d6;
}

<div
  className="recipe-4 recipe-5"
>
  <div
    className="recipe-2 recipe-3"
  >
    <div
      className="recipe-0 recipe-1"
    >
      <div>
        Lorem ipsum
      </div>
    </div>
  </div>
</div>
`;
